Improve Notification Channel strings
String cleanup. Also remove the unused CHANNEL_LIFECYCLE.